bin_PROGRAMS = scorched3d

scorched3d_SOURCES = \
	../../common/engine/ModFileEntryLoader.cpp \
	main.cpp \
	ScorchedParams.cpp \
	../wxdialogs/CreateDialogs.cpp \
	../wxdialogs/DisplayDialog.cpp \
	../wxdialogs/KeyDialog.cpp \
	../wxdialogs/MainDialog.cpp \
	../wxdialogs/OptionEntrySetter.cpp \
	../wxdialogs/ServerSDialog.cpp \
	../wxdialogs/SettingsDialog.cpp \
	../wxdialogs/TrueTypeFont.cpp \
	../../common/common/ARGParser.cpp \
	../../common/common/Clock.cpp \
	../../common/common/Counter.cpp \
	../../common/common/Defines.cpp \
	../../common/common/DefinesAssert.cpp \
	../../common/common/DefinesFile.cpp \
	../../common/common/DefinesMath.cpp \
	../../common/common/DefinesScorched.cpp \
	../../common/common/DefinesString.cpp \
	../../common/common/FileLines.cpp \
	../../common/common/FileList.cpp \
	../../common/common/FileLogger.cpp \
	../../common/common/fixed.cpp \
	../../common/common/FixedVector.cpp \
	../../common/common/FixedVector4.cpp \
	../../common/common/Keyboard.cpp \
	../../common/common/KeyboardKey.cpp \
	../../common/common/Logger.cpp \
	../../common/common/LoggerI.cpp \
	../../common/common/NumberParser.cpp \
	../../common/common/OptionEntry.cpp \
	../../common/common/OptionsGame.cpp \
	../../common/common/OptionsParameters.cpp \
	../../common/common/ProgressCounter.cpp \
	../../common/common/snprintf.c \
	../../common/common/Vector.cpp \
	../../common/common/Vector4.cpp \
	../../common/common/VectorLib.cpp \
	../../common/XML/XMLFile.cpp \
	../../common/XML/XMLNode.cpp \
	../../common/XML/XMLParser.cpp \
	../../common/XML/XMLStringBuffer.cpp \
	../../client/graph/OptionsDisplay.cpp \
	../../common/engine/ModDirs.cpp \
	../../common/engine/ModFileEntry.cpp \
	../../common/engine/ModFiles.cpp \
	../../common/engine/ModInfo.cpp \
	../../common/net/NetBuffer.cpp \
	../../common/net/NetBufferPool.cpp \
	../../common/net/NetBufferUtil.cpp \
	../../common/net/NetInterface.cpp \
	../../common/net/NetLoopBack.cpp \
	../../common/net/NetMessage.cpp \
	../../common/net/NetMessageHandler.cpp \
	../../common/net/NetMessagePool.cpp \
	../../client/client/UniqueIdStore.cpp \
	../../server/tankai/TankAINames.cpp \
	../../common/landscapedef/LandscapeDefinitionsBase.cpp \
	../../common/lang/Lang.cpp \
	../../common/lang/LangImpl.cpp \
	../../common/lang/LangParam.cpp \
	../../common/lang/LangResource.cpp \
	../../common/lang/LangString.cpp \
	../../common/lang/ResourceBundle.cpp \
	../../common/lang/ResourceBundleEntry.cpp \
	../../common/lang/ResourceBundleEntryImpl.cpp \
	../../common/engine/ModFileEntryLoader.h \
	ScorchedParams.h \
	../wxdialogs/DisplayDialog.h \
	../wxdialogs/KeyDialog.h \
	../wxdialogs/MainDialog.h \
	../wxdialogs/OptionEntrySetter.h \
	../wxdialogs/ServerSDialog.h \
	../wxdialogs/SettingsDialog.h \
	../wxdialogs/TrueTypeFont.h \
	../../common/common/ARGParser.h \
	../../common/common/Clock.h \
	../../common/common/Counter.h \
	../../common/common/Defines.h \
	../../common/common/DefinesAssert.h \
	../../common/common/DefinesFile.h \
	../../common/common/DefinesMath.h \
	../../common/common/DefinesScorched.h \
	../../common/common/DefinesString.h \
	../../common/common/FileLines.h \
	../../common/common/FileList.h \
	../../common/common/FileLogger.h \
	../../common/common/fixed.h \
	../../common/common/FixedVector.h \
	../../common/common/FixedVector4.h \
	../../common/common/Keyboard.h \
	../../common/common/KeyboardHistory.h \
	../../common/common/KeyboardKey.h \
	../../common/common/KeyStateTranslate.h \
	../../common/common/KeyTranslate.h \
	../../common/common/KeyTranslateWx.h \
	../../common/common/Logger.h \
	../../common/common/LoggerI.h \
	../../common/common/main.h \
	../../common/common/NumberParser.h \
	../../common/common/OptionEntry.h \
	../../common/common/OptionsGame.h \
	../../common/common/OptionsParameters.h \
	../../common/common/ProgressCounter.h \
	../../common/common/Vector.h \
	../../common/common/Vector4.h \
	../../common/common/VectorLib.h \
	../../common/XML/XMLFile.h \
	../../common/XML/XMLNode.h \
	../../common/XML/XMLParser.h \
	../../common/XML/XMLStringBuffer.h \
	../../client/graph/OptionsDisplay.h \
	../../common/engine/ModDirs.h \
	../../common/engine/ModFileEntry.h \
	../../common/engine/ModFiles.h \
	../../common/engine/ModInfo.h \
	../../common/net/NetBuffer.h \
	../../common/net/NetBufferPool.h \
	../../common/net/NetBufferUtil.h \
	../../common/net/NetInterface.h \
	../../common/net/NetInterfaceFlags.h \
	../../common/net/NetLoopBack.h \
	../../common/net/NetMessage.h \
	../../common/net/NetMessageHandler.h \
	../../common/net/NetMessagePool.h \
	../../client/client/UniqueIdStore.h \
	../../server/tankai/TankAINames.h \
	../../common/landscapedef/LandscapeDefinitionsBase.h \
	../../common/lang/Lang.h \
	../../common/lang/LangImpl.h \
	../../common/lang/LangParam.h \
	../../common/lang/LangResource.h \
	../../common/lang/LangString.h \
	../../common/lang/ResourceBundle.h \
	../../common/lang/ResourceBundleEntry.h \
	../../common/lang/ResourceBundleEntryImpl.h

AM_CPPFLAGS = -I../../common/porting -I../../common -I../../client -I../../server -I../../launcher @WX_CFLAGS@ @FT2_CFLAGS@ @SDL_CFLAGS@
LDADD = @WX_LIBS@ @FT2_LIBS@ @SDL_LIBS@

