bin_PROGRAMS = scorched3ds

scorched3ds_SOURCES = \
	../../common/actions/ActionParams.cpp \
	../../common/actions/ParticleGroup.cpp \
	../../common/actions/TanketMovement.cpp \
	../../common/actions/TanketResign.cpp \
	../../common/actions/TankRemove.cpp \
	../../common/actions/TankSay.cpp \
	../../common/actions/TargetFalling.cpp \
	../../common/actions/Teleport.cpp \
	../../common/coms/ComsTankChangeMessage.cpp \
	../../common/engine/ModFileEntryLoader.cpp \
	../../common/engine/ObjectGroup.cpp \
	../../common/engine/ObjectGroupEntry.cpp \
	../../common/engine/ObjectGroupEntryDefinition.cpp \
	../../common/engine/ObjectGroups.cpp \
	../../common/events/EventController.cpp \
	../../common/events/EventHandler.cpp \
	../../common/events/EventHandlerAchievement.cpp \
	../../common/events/EventHandlerAchievementNumberRank.cpp \
	../../common/events/EventHandlerAchievementNumberRankKills.cpp \
	../../common/events/EventHandlerDataBase.cpp \
	../../common/events/EventHandlerDataBaseMySQL.cpp \
	../../common/events/EventHandlerDataBasePGSQL.cpp \
	../../common/image/Image.cpp \
	../../common/image/ImageBitmapFactory.cpp \
	../../common/image/ImageData.cpp \
	../../common/image/ImageFactory.cpp \
	../../common/image/ImageID.cpp \
	../../common/image/ImageJpgFactory.cpp \
	../../common/image/ImageLuminanceFactory.cpp \
	../../common/image/ImagePngFactory.cpp \
	../../common/image/ImageStore.cpp \
	../../common/landscapedef/LandscapeDefnTankStart.cpp \
	../../common/simactions/NextTurnSimAction.cpp \
	../../common/simactions/TankAchievementSimAction.cpp \
	../../common/simactions/TankBuyingSimAction.cpp \
	../../common/tanket/Tanket.cpp \
	../../common/tanket/TanketAccessories.cpp \
	../../common/tanket/TanketAutoDefense.cpp \
	../../common/tanket/TanketBatteries.cpp \
	../../common/tanket/TanketShotInfo.cpp \
	../../common/tanket/TanketType.cpp \
	../../common/tanket/TanketTypes.cpp \
	../../common/tanket/TanketWeapon.cpp \
	../../common/tank/Tank.cpp \
	../../common/tank/TankAvatar.cpp \
	../../common/tank/TankCamera.cpp \
	../../common/tank/TankColorGenerator.cpp \
	../../common/tank/TankDeadContainer.cpp \
	../../common/tank/TankLib.cpp \
	../../common/tank/TankModel.cpp \
	../../common/tank/TankModelContainer.cpp \
	../../common/tank/TankModelStore.cpp \
	../../common/tank/TankScore.cpp \
	../../common/tank/TankShotHistory.cpp \
	../../common/tank/TankSort.cpp \
	../../common/tank/TankState.cpp \
	../../common/tank/TankTeamScore.cpp \
	../../common/tank/TankViewPoints.cpp \
	../../common/tank/TankWeaponSwitcher.cpp \
	../../common/target/TargetDamage.cpp \
	../../common/target/TargetGroup.cpp \
	../../common/weapons/WeaponAimed.cpp \
	../../common/XML/XMLDiff.cpp \
	../igd/igd.cpp \
	../server/ScorchedServerSettings.cpp \
	../server/ServerAuthHandlerStore.cpp \
	../server/ServerHandlers.cpp \
	../server/ServerTankChangeHandler.cpp \
	main.cpp \
	../../common/common/ARGParser.cpp \
	../../common/common/ChannelManager.cpp \
	../../common/common/ChannelText.cpp \
	../../common/common/ChannelTextParser.cpp \
	../../common/common/Clock.cpp \
	../../common/common/Counter.cpp \
	../../common/common/Defines.cpp \
	../../common/common/DefinesAssert.cpp \
	../../common/common/DefinesFile.cpp \
	../../common/common/DefinesMath.cpp \
	../../common/common/DefinesScorched.cpp \
	../../common/common/DefinesString.cpp \
	../../common/common/FileLines.cpp \
	../../common/common/FileList.cpp \
	../../common/common/FileLogger.cpp \
	../../common/common/fixed.cpp \
	../../common/common/FixedVector.cpp \
	../../common/common/FixedVector4.cpp \
	../../common/common/Keyboard.cpp \
	../../common/common/KeyboardKey.cpp \
	../../common/common/Line.cpp \
	../../common/common/Logger.cpp \
	../../common/common/LoggerI.cpp \
	../../common/common/ModelID.cpp \
	../../common/common/NumberParser.cpp \
	../../common/common/OptionEntry.cpp \
	../../common/common/OptionsGame.cpp \
	../../common/common/OptionsMasterListServer.cpp \
	../../common/common/OptionsParameters.cpp \
	../../common/common/OptionsScorched.cpp \
	../../common/common/OptionsTransient.cpp \
	../../common/common/ProgressCounter.cpp \
	../../common/common/RandomGenerator.cpp \
	../../common/common/RollingAverage.cpp \
	../../common/common/sha2.cpp \
	../../common/common/snprintf.c \
	../../common/common/SplineCurve.cpp \
	../../common/common/SplinePath.cpp \
	../../common/common/ToolTip.cpp \
	../../common/common/Triangle.cpp \
	../../common/common/Vector.cpp \
	../../common/common/Vector4.cpp \
	../../common/common/VectorLib.cpp \
	../server/ScorchedServer.cpp \
	../server/ServerAdminCommon.cpp \
	../server/ServerAdminHandler.cpp \
	../server/ServerAdminSessions.cpp \
	../server/ServerAuthHandler.cpp \
	../server/ServerAuthHandlerDefault.cpp \
	../server/ServerAuthHandlerForumLogin.cpp \
	../server/ServerAuthHandlerMinKills.cpp \
	../server/ServerAuthHandlerPrefered.cpp \
	../server/ServerBanned.cpp \
	../server/ServerBrowserInfo.cpp \
	../server/ServerBuyAccessoryHandler.cpp \
	../server/ServerChannelAuth.cpp \
	../server/ServerChannelFilter.cpp \
	../server/ServerChannelManager.cpp \
	../server/ServerCommon.cpp \
	../server/ServerConnectAuthHandler.cpp \
	../server/ServerConnectHandler.cpp \
	../server/ServerConsoleLogger.cpp \
	../server/ServerConsoleProgressCounter.cpp \
	../server/ServerDefenseHandler.cpp \
	../server/ServerDestination.cpp \
	../server/ServerDestinations.cpp \
	../server/ServerFileAkHandler.cpp \
	../server/ServerFileServer.cpp \
	../server/ServerGiftMoneyHandler.cpp \
	../server/ServerHaveModFilesHandler.cpp \
	../server/ServerInitializeModHandler.cpp \
	../server/ServerLinesHandler.cpp \
	../server/ServerLoadLevel.cpp \
	../server/ServerLog.cpp \
	../server/ServerMain.cpp \
	../server/ServerMessageHandler.cpp \
	../server/ServerOperationResultHandler.cpp \
	../server/ServerParams.cpp \
	../server/ServerPlayedMoveHandler.cpp \
	../server/ServerRegistration.cpp \
	../server/ServerSimulator.cpp \
	../server/ServerState.cpp \
	../server/ServerStateBuying.cpp \
	../server/ServerStateEnoughPlayers.cpp \
	../server/ServerStateFinishWait.cpp \
	../server/ServerStateNewGame.cpp \
	../server/ServerStatePlaying.cpp \
	../server/ServerStateScore.cpp \
	../server/ServerStateStartingMatch.cpp \
	../server/ServerStateTankNewGame.cpp \
	../server/ServerSyncCheck.cpp \
	../server/ServerTextFilter.cpp \
	../server/ServerTimedMessage.cpp \
	../server/ServerTurns.cpp \
	../server/ServerTurnsFree.cpp \
	../server/ServerTurnsSequential.cpp \
	../server/ServerTurnsSimultaneous.cpp \
	../tankai/TankAI.cpp \
	../tankai/TankAIAdder.cpp \
	../tankai/TankAIAimGuesser.cpp \
	../tankai/TankAICurrent.cpp \
	../tankai/TankAICurrentDefenses.cpp \
	../tankai/TankAICurrentMove.cpp \
	../tankai/TankAICurrentMoveWeapons.cpp \
	../tankai/TankAICurrentTarget.cpp \
	../tankai/TankAICurrentWeapons.cpp \
	../tankai/TankAINames.cpp \
	../tankai/TankAINone.cpp \
	../tankai/TankAIRandom.cpp \
	../tankai/TankAIShallow.cpp \
	../tankai/TankAISniperGuesser.cpp \
	../tankai/TankAIStore.cpp \
	../tankai/TankAIStrings.cpp \
	../tankai/TankAIWeaponSets.cpp \
	../webserver/ServerWebAppletHandler.cpp \
	../webserver/ServerWebHandler.cpp \
	../webserver/ServerWebServer.cpp \
	../webserver/ServerWebServerI.cpp \
	../webserver/ServerWebServerQueue.cpp \
	../webserver/ServerWebServerUtil.cpp \
	../webserver/ServerWebSettingsHandler.cpp \
	../../common/XML/XMLFile.cpp \
	../../common/XML/XmlNamedNetBuffer.cpp \
	../../common/XML/XMLNode.cpp \
	../../common/XML/XMLParser.cpp \
	../../common/XML/XMLStringBuffer.cpp \
	../../common/weapons/Accessory.cpp \
	../../common/weapons/AccessoryCreateContext.cpp \
	../../common/weapons/AccessoryPart.cpp \
	../../common/weapons/AccessoryStore.cpp \
	../../common/weapons/AutoDefense.cpp \
	../../common/weapons/Battery.cpp \
	../../common/weapons/Economy.cpp \
	../../common/weapons/EconomyFreeMarket.cpp \
	../../common/weapons/EconomyNone.cpp \
	../../common/weapons/EconomyStore.cpp \
	../../common/weapons/Parachute.cpp \
	../../common/weapons/Shield.cpp \
	../../common/weapons/ShieldRound.cpp \
	../../common/weapons/ShieldRoundMag.cpp \
	../../common/weapons/ShieldRoundReflective.cpp \
	../../common/weapons/ShieldSquare.cpp \
	../../common/weapons/ShieldSquareReflective.cpp \
	../../common/weapons/Weapon.cpp \
	../../common/weapons/WeaponAddTarget.cpp \
	../../common/weapons/WeaponAimedOver.cpp \
	../../common/weapons/WeaponAimedUnder.cpp \
	../../common/weapons/WeaponAnimation.cpp \
	../../common/weapons/WeaponCenterPosition.cpp \
	../../common/weapons/WeaponDelay.cpp \
	../../common/weapons/WeaponExplosion.cpp \
	../../common/weapons/WeaponGiveAccessory.cpp \
	../../common/weapons/WeaponGiveLife.cpp \
	../../common/weapons/WeaponGiveLives.cpp \
	../../common/weapons/WeaponGiveMoney.cpp \
	../../common/weapons/WeaponGivePower.cpp \
	../../common/weapons/WeaponGiveScore.cpp \
	../../common/weapons/WeaponGiveWin.cpp \
	../../common/weapons/WeaponGotoLabel.cpp \
	../../common/weapons/WeaponGroupSelect.cpp \
	../../common/weapons/WeaponInvokeWeapon.cpp \
	../../common/weapons/WeaponLabel.cpp \
	../../common/weapons/WeaponLaser.cpp \
	../../common/weapons/WeaponLeapFrog.cpp \
	../../common/weapons/WeaponLightning.cpp \
	../../common/weapons/WeaponMessage.cpp \
	../../common/weapons/WeaponMirv.cpp \
	../../common/weapons/WeaponMoveTank.cpp \
	../../common/weapons/WeaponMulti.cpp \
	../../common/weapons/WeaponMuzzle.cpp \
	../../common/weapons/WeaponNapalm.cpp \
	../../common/weapons/WeaponNull.cpp \
	../../common/weapons/WeaponPosition.cpp \
	../../common/weapons/WeaponProjectile.cpp \
	../../common/weapons/WeaponRandomChoice.cpp \
	../../common/weapons/WeaponRedirect.cpp \
	../../common/weapons/WeaponReference.cpp \
	../../common/weapons/WeaponRepeat.cpp \
	../../common/weapons/WeaponRoller.cpp \
	../../common/weapons/WeaponScatterDirection.cpp \
	../../common/weapons/WeaponScatterPosition.cpp \
	../../common/weapons/WeaponScript.cpp \
	../../common/weapons/WeaponSelectPosition.cpp \
	../../common/weapons/WeaponSkyFlash.cpp \
	../../common/weapons/WeaponSound.cpp \
	../../common/weapons/WeaponTankPosition.cpp \
	../../common/weapons/WeaponTankVelocity.cpp \
	../../common/weapons/WeaponTeamAction.cpp \
	../../common/weapons/WeaponTeleport.cpp \
	../../common/weapons/WeaponTranslate.cpp \
	../../common/weapons/WeaponTypeAction.cpp \
	../../common/weapons/WeaponVelocity.cpp \
	../../common/actions/Action.cpp \
	../../common/actions/AddTarget.cpp \
	../../common/actions/CallbackWeapon.cpp \
	../../common/actions/CameraPositionAction.cpp \
	../../common/actions/Explosion.cpp \
	../../common/actions/ExplosionParams.cpp \
	../../common/actions/Laser.cpp \
	../../common/actions/LaserParams.cpp \
	../../common/actions/Lightning.cpp \
	../../common/actions/Napalm.cpp \
	../../common/actions/NapalmParams.cpp \
	../../common/actions/Resurrection.cpp \
	../../common/actions/ShieldHit.cpp \
	../../common/actions/ShotBounce.cpp \
	../../common/actions/ShotProjectile.cpp \
	../../common/actions/ShowScoreAction.cpp \
	../../common/actions/SkyFlash.cpp \
	../../common/actions/SoundAction.cpp \
	../../common/3dsparse/aseFile.lex.cpp \
	../../common/3dsparse/aseFile.tab.cpp \
	../../common/3dsparse/ASEModelFactory.cpp \
	../../common/3dsparse/Bone.cpp \
	../../common/3dsparse/Face.cpp \
	../../common/3dsparse/Mesh.cpp \
	../../common/3dsparse/Model.cpp \
	../../common/3dsparse/ModelMaths.cpp \
	../../common/3dsparse/ModelStore.cpp \
	../../common/3dsparse/MSModelFactory.cpp \
	../../common/3dsparse/TreeModelFactory.cpp \
	../../common/3dsparse/Vertex.cpp \
	../../common/coms/ComsAdminMessage.cpp \
	../../common/coms/ComsAdminResultMessage.cpp \
	../../common/coms/ComsBuyAccessoryMessage.cpp \
	../../common/coms/ComsChannelMessage.cpp \
	../../common/coms/ComsChannelTextMessage.cpp \
	../../common/coms/ComsConnectAcceptMessage.cpp \
	../../common/coms/ComsConnectAuthMessage.cpp \
	../../common/coms/ComsConnectMessage.cpp \
	../../common/coms/ComsConnectRejectMessage.cpp \
	../../common/coms/ComsDefenseMessage.cpp \
	../../common/coms/ComsFileAkMessage.cpp \
	../../common/coms/ComsFileMessage.cpp \
	../../common/coms/ComsGameStoppedMessage.cpp \
	../../common/coms/ComsGiftMoneyMessage.cpp \
	../../common/coms/ComsHaveModFilesMessage.cpp \
	../../common/coms/ComsInitializeModMessage.cpp \
	../../common/coms/ComsLevelLoadedMessage.cpp \
	../../common/coms/ComsLinesMessage.cpp \
	../../common/coms/ComsLoadLevelMessage.cpp \
	../../common/coms/ComsMessage.cpp \
	../../common/coms/ComsMessageHandler.cpp \
	../../common/coms/ComsMessageSender.cpp \
	../../common/coms/ComsNetStatMessage.cpp \
	../../common/coms/ComsOperationMessage.cpp \
	../../common/coms/ComsOperationResultMessage.cpp \
	../../common/coms/ComsPlayedMoveMessage.cpp \
	../../common/coms/ComsSimulateMessage.cpp \
	../../common/coms/ComsSimulateResultMessage.cpp \
	../../common/coms/ComsSyncCheckMessage.cpp \
	../../common/engine/ActionController.cpp \
	../../common/engine/EventContainer.cpp \
	../../common/engine/GameState.cpp \
	../../common/engine/GameStateI.cpp \
	../../common/engine/GameStateStimulusI.cpp \
	../../common/engine/MainLoop.cpp \
	../../common/engine/MainLoopI.cpp \
	../../common/engine/MetaClass.cpp \
	../../common/engine/ModDirs.cpp \
	../../common/engine/ModFileEntry.cpp \
	../../common/engine/ModFiles.cpp \
	../../common/engine/ModInfo.cpp \
	../../common/engine/PhysicsParticle.cpp \
	../../common/engine/PhysicsParticleObject.cpp \
	../../common/engine/SaveGame.cpp \
	../../common/engine/ScorchedCollisionIds.cpp \
	../../common/engine/ScorchedContext.cpp \
	../../common/engine/Simulator.cpp \
	../../common/engine/Wind.cpp \
	../../common/landscapedef/LandscapeDefinition.cpp \
	../../common/landscapedef/LandscapeDefinitionCache.cpp \
	../../common/landscapedef/LandscapeDefinitions.cpp \
	../../common/landscapedef/LandscapeDefinitionsBase.cpp \
	../../common/landscapedef/LandscapeDefn.cpp \
	../../common/landscapedef/LandscapeEvents.cpp \
	../../common/landscapedef/LandscapeInclude.cpp \
	../../common/landscapedef/LandscapeMovement.cpp \
	../../common/landscapedef/LandscapeMusic.cpp \
	../../common/landscapedef/LandscapeOptions.cpp \
	../../common/landscapedef/LandscapeSound.cpp \
	../../common/landscapedef/LandscapeTex.cpp \
	../../common/landscapedef/LandscapeTexDefn.cpp \
	../../common/landscapemap/DeformLandscape.cpp \
	../../common/landscapemap/GroundMaps.cpp \
	../../common/landscapemap/HeightMap.cpp \
	../../common/landscapemap/HeightMapLoader.cpp \
	../../common/landscapemap/HeightMapModifier.cpp \
	../../common/landscapemap/LandscapeMaps.cpp \
	../../common/landscapemap/MovementMap.cpp \
	../../common/landscapemap/NapalmMap.cpp \
	../../common/landscapemap/RoofMaps.cpp \
	../../common/lua/lapi.cpp \
	../../common/lua/lauxlib.cpp \
	../../common/lua/lbaselib.cpp \
	../../common/lua/lcode.cpp \
	../../common/lua/ldblib.cpp \
	../../common/lua/ldebug.cpp \
	../../common/lua/ldo.cpp \
	../../common/lua/ldump.cpp \
	../../common/lua/lfixed.cpp \
	../../common/lua/lfunc.cpp \
	../../common/lua/lgc.cpp \
	../../common/lua/linit.cpp \
	../../common/lua/liolib.cpp \
	../../common/lua/llex.cpp \
	../../common/lua/lmathlib.cpp \
	../../common/lua/lmem.cpp \
	../../common/lua/loadlib.cpp \
	../../common/lua/lobject.cpp \
	../../common/lua/lopcodes.cpp \
	../../common/lua/loslib.cpp \
	../../common/lua/lparser.cpp \
	../../common/lua/lstate.cpp \
	../../common/lua/lstring.cpp \
	../../common/lua/lstrlib.cpp \
	../../common/lua/ltable.cpp \
	../../common/lua/ltablib.cpp \
	../../common/lua/ltm.cpp \
	../../common/lua/LUAS3DLib.cpp \
	../../common/lua/LUAS3DWeaponLib.cpp \
	../../common/lua/LUAScript.cpp \
	../../common/lua/LUAScriptFactory.cpp \
	../../common/lua/LUAScriptHook.cpp \
	../../common/lua/LUAUtil.cpp \
	../../common/lua/lundump.cpp \
	../../common/lua/lvm.cpp \
	../../common/lua/lzio.cpp \
	../../common/movement/Boid2.cpp \
	../../common/movement/TargetMovement.cpp \
	../../common/movement/TargetMovementEntry.cpp \
	../../common/movement/TargetMovementEntryBoids.cpp \
	../../common/movement/TargetMovementEntryShips.cpp \
	../../common/movement/TargetMovementEntrySpline.cpp \
	../../common/net/NetBuffer.cpp \
	../../common/net/NetBufferPool.cpp \
	../../common/net/NetBufferUtil.cpp \
	../../common/net/NetInterface.cpp \
	../../common/net/NetLoopBack.cpp \
	../../common/net/NetMessage.cpp \
	../../common/net/NetMessageHandler.cpp \
	../../common/net/NetMessagePool.cpp \
	../../common/net/NetServerTCP.cpp \
	../../common/net/NetServerTCP3.cpp \
	../../common/net/NetServerTCP3Coms.cpp \
	../../common/net/NetServerTCP3Destination.cpp \
	../../common/net/NetServerTCP3Recv.cpp \
	../../common/net/NetServerTCP3Send.cpp \
	../../common/net/NetServerTCPProtocol.cpp \
	../../common/net/NetServerTCPRead.cpp \
	../../common/placement/PlacementObject.cpp \
	../../common/placement/PlacementObjectGroup.cpp \
	../../common/placement/PlacementObjectHeight.cpp \
	../../common/placement/PlacementObjectNone.cpp \
	../../common/placement/PlacementObjectRandom.cpp \
	../../common/placement/PlacementObjectShadow.cpp \
	../../common/placement/PlacementObjectTarget.cpp \
	../../common/placement/PlacementShadowDefinition.cpp \
	../../common/placement/PlacementTankPosition.cpp \
	../../common/placement/PlacementType.cpp \
	../../common/placement/PlacementTypeBounds.cpp \
	../../common/placement/PlacementTypeCount.cpp \
	../../common/placement/PlacementTypeDirect.cpp \
	../../common/placement/PlacementTypeMask.cpp \
	../../common/placement/PlacementTypeTankStart.cpp \
	../../common/placement/PlacementTypeTree.cpp \
	../../common/target/Target.cpp \
	../../common/target/TargetContainer.cpp \
	../../common/target/TargetDamageCalc.cpp \
	../../common/target/TargetDefinition.cpp \
	../../common/target/TargetLife.cpp \
	../../common/target/TargetParachute.cpp \
	../../common/target/TargetRenderer.cpp \
	../../common/target/TargetShield.cpp \
	../../common/target/TargetSpace.cpp \
	../../common/target/TargetSpaceContainment.cpp \
	../../common/target/TargetState.cpp \
	../../common/lang/Lang.cpp \
	../../common/lang/LangImpl.cpp \
	../../common/lang/LangParam.cpp \
	../../common/lang/LangResource.cpp \
	../../common/lang/LangString.cpp \
	../../common/lang/ResourceBundle.cpp \
	../../common/lang/ResourceBundleEntry.cpp \
	../../common/lang/ResourceBundleEntryImpl.cpp \
	../../common/simactions/AdminSimAction.cpp \
	../../common/simactions/PlayMovesSimAction.cpp \
	../../common/simactions/RoundStartSimAction.cpp \
	../../common/simactions/RoundStopSimAction.cpp \
	../../common/simactions/ShowScoreSimAction.cpp \
	../../common/simactions/SimAction.cpp \
	../../common/simactions/SyncCheckSimAction.cpp \
	../../common/simactions/TankAccessorySimAction.cpp \
	../../common/simactions/TankAddSimAction.cpp \
	../../common/simactions/TankChangeSimAction.cpp \
	../../common/simactions/TankDefenseSimAction.cpp \
	../../common/simactions/TankGiftSimAction.cpp \
	../../common/simactions/TankLoadedSimAction.cpp \
	../../common/simactions/TankNewGameSimAction.cpp \
	../../common/simactions/TankNewMatchSimAction.cpp \
	../../common/simactions/TankRankSimAction.cpp \
	../../common/simactions/TankRemoveSimAction.cpp \
	../../common/simactions/TankStartMoveSimAction.cpp \
	../../common/simactions/TankStopMoveSimAction.cpp \
	../../common/simactions/TankTeamBallanceSimAction.cpp \
	../../common/actions/ActionParams.h \
	../../common/actions/ParticleGroup.h \
	../../common/actions/TanketMovement.h \
	../../common/actions/TanketResign.h \
	../../common/actions/TankRemove.h \
	../../common/actions/TankSay.h \
	../../common/actions/TargetFalling.h \
	../../common/actions/Teleport.h \
	../../common/common/ARGParser.h \
	../../common/common/ChannelManager.h \
	../../common/common/ChannelText.h \
	../../common/common/ChannelTextParser.h \
	../../common/common/Clock.h \
	../../common/common/Counter.h \
	../../common/common/Defines.h \
	../../common/common/DefinesAssert.h \
	../../common/common/DefinesFile.h \
	../../common/common/DefinesMath.h \
	../../common/common/DefinesScorched.h \
	../../common/common/DefinesString.h \
	../../common/common/FileLines.h \
	../../common/common/FileList.h \
	../../common/common/FileLogger.h \
	../../common/common/fixed.h \
	../../common/common/FixedVector.h \
	../../common/common/FixedVector4.h \
	../../common/common/Keyboard.h \
	../../common/common/KeyboardHistory.h \
	../../common/common/KeyboardKey.h \
	../../common/common/KeyStateTranslate.h \
	../../common/common/KeyTranslate.h \
	../../common/common/KeyTranslateWx.h \
	../../common/common/Line.h \
	../../common/common/Logger.h \
	../../common/common/LoggerI.h \
	../../common/common/main.h \
	../../common/common/ModelID.h \
	../../common/common/NumberParser.h \
	../../common/common/OptionEntry.h \
	../../common/common/OptionsGame.h \
	../../common/common/OptionsMasterListServer.h \
	../../common/common/OptionsParameters.h \
	../../common/common/OptionsScorched.h \
	../../common/common/OptionsTransient.h \
	../../common/common/ProgressCounter.h \
	../../common/common/RandomGenerator.h \
	../../common/common/RollingAverage.h \
	../../common/common/sha2.h \
	../../common/common/SplineCurve.h \
	../../common/common/SplinePath.h \
	../../common/common/StdVectorPtr.h \
	../../common/common/ToolTip.h \
	../../common/common/Triangle.h \
	../../common/common/Vector.h \
	../../common/common/Vector4.h \
	../../common/common/VectorLib.h \
	../../common/coms/ComsTankChangeMessage.h \
	../../common/engine/ModFileEntryLoader.h \
	../../common/engine/ObjectGroup.h \
	../../common/engine/ObjectGroupEntry.h \
	../../common/engine/ObjectGroupEntryDefinition.h \
	../../common/engine/ObjectGroups.h \
	../../common/events/EventController.h \
	../../common/events/EventHandler.h \
	../../common/events/EventHandlerAchievement.h \
	../../common/events/EventHandlerAchievementNumberRank.h \
	../../common/events/EventHandlerAchievementNumberRankKills.h \
	../../common/events/EventHandlerDataBase.h \
	../../common/events/EventHandlerDataBaseMySQL.h \
	../../common/events/EventHandlerDataBasePGSQL.h \
	../../common/image/Image.h \
	../../common/image/ImageBitmapFactory.h \
	../../common/image/ImageData.h \
	../../common/image/ImageFactory.h \
	../../common/image/ImageID.h \
	../../common/image/ImageJpgFactory.h \
	../../common/image/ImageLuminanceFactory.h \
	../../common/image/ImagePngFactory.h \
	../../common/image/ImageStore.h \
	../../common/landscapedef/LandscapeDefnTankStart.h \
	../../common/simactions/NextTurnSimAction.h \
	../../common/simactions/TankAchievementSimAction.h \
	../../common/simactions/TankBuyingSimAction.h \
	../../common/tanket/Tanket.h \
	../../common/tanket/TanketAccessories.h \
	../../common/tanket/TanketAutoDefense.h \
	../../common/tanket/TanketBatteries.h \
	../../common/tanket/TanketShotInfo.h \
	../../common/tanket/TanketType.h \
	../../common/tanket/TanketTypes.h \
	../../common/tanket/TanketWeapon.h \
	../../common/tank/Tank.h \
	../../common/tank/TankAvatar.h \
	../../common/tank/TankCamera.h \
	../../common/tank/TankColorGenerator.h \
	../../common/tank/TankDeadContainer.h \
	../../common/tank/TankLib.h \
	../../common/tank/TankModel.h \
	../../common/tank/TankModelContainer.h \
	../../common/tank/TankModelStore.h \
	../../common/tank/TankScore.h \
	../../common/tank/TankShotHistory.h \
	../../common/tank/TankSort.h \
	../../common/tank/TankState.h \
	../../common/tank/TankTeamScore.h \
	../../common/tank/TankViewPoints.h \
	../../common/tank/TankWeaponSwitcher.h \
	../../common/target/TargetDamage.h \
	../../common/target/TargetGroup.h \
	../../common/weapons/WeaponAimed.h \
	../../common/XML/XMLDiff.h \
	../igd/igd.h \
	../server/ScorchedServer.h \
	../server/ScorchedServerSettings.h \
	../server/ServerAdminCommon.h \
	../server/ServerAdminHandler.h \
	../server/ServerAdminSessions.h \
	../server/ServerAuthHandler.h \
	../server/ServerAuthHandlerDefault.h \
	../server/ServerAuthHandlerForumLogin.h \
	../server/ServerAuthHandlerMinKills.h \
	../server/ServerAuthHandlerPrefered.h \
	../server/ServerAuthHandlerStore.h \
	../server/ServerBanned.h \
	../server/ServerBrowserInfo.h \
	../server/ServerBuyAccessoryHandler.h \
	../server/ServerChannelAuth.h \
	../server/ServerChannelFilter.h \
	../server/ServerChannelManager.h \
	../server/ServerCommon.h \
	../server/ServerConnectAuthHandler.h \
	../server/ServerConnectHandler.h \
	../server/ServerConsoleLogger.h \
	../server/ServerConsoleProgressCounter.h \
	../server/ServerDefenseHandler.h \
	../server/ServerDestination.h \
	../server/ServerDestinations.h \
	../server/ServerFileAkHandler.h \
	../server/ServerFileServer.h \
	../server/ServerGiftMoneyHandler.h \
	../server/ServerHandlers.h \
	../server/ServerHaveModFilesHandler.h \
	../server/ServerInitializeModHandler.h \
	../server/ServerLinesHandler.h \
	../server/ServerLoadLevel.h \
	../server/ServerLog.h \
	../server/ServerMain.h \
	../server/ServerMessageHandler.h \
	../server/ServerOperationResultHandler.h \
	../server/ServerParams.h \
	../server/ServerPlayedMoveHandler.h \
	../server/ServerRegistration.h \
	../server/ServerSimulator.h \
	../server/ServerState.h \
	../server/ServerStateBuying.h \
	../server/ServerStateEnoughPlayers.h \
	../server/ServerStateFinishWait.h \
	../server/ServerStateNewGame.h \
	../server/ServerStatePlaying.h \
	../server/ServerStateScore.h \
	../server/ServerStateStartingMatch.h \
	../server/ServerStateTankNewGame.h \
	../server/ServerSyncCheck.h \
	../server/ServerTankChangeHandler.h \
	../server/ServerTextFilter.h \
	../server/ServerTimedMessage.h \
	../server/ServerTurns.h \
	../server/ServerTurnsFree.h \
	../server/ServerTurnsSequential.h \
	../server/ServerTurnsSimultaneous.h \
	../tankai/TankAI.h \
	../tankai/TankAIAdder.h \
	../tankai/TankAIAimGuesser.h \
	../tankai/TankAICurrent.h \
	../tankai/TankAICurrentDefenses.h \
	../tankai/TankAICurrentMove.h \
	../tankai/TankAICurrentMoveWeapons.h \
	../tankai/TankAICurrentTarget.h \
	../tankai/TankAICurrentWeapons.h \
	../tankai/TankAINames.h \
	../tankai/TankAINone.h \
	../tankai/TankAIRandom.h \
	../tankai/TankAIShallow.h \
	../tankai/TankAISniperGuesser.h \
	../tankai/TankAIStore.h \
	../tankai/TankAIStrings.h \
	../tankai/TankAIWeaponSets.h \
	../webserver/ServerWebAppletHandler.h \
	../webserver/ServerWebHandler.h \
	../webserver/ServerWebServer.h \
	../webserver/ServerWebServerI.h \
	../webserver/ServerWebServerQueue.h \
	../webserver/ServerWebServerUtil.h \
	../webserver/ServerWebSettingsHandler.h \
	../../common/XML/XMLFile.h \
	../../common/XML/XmlNamedNetBuffer.h \
	../../common/XML/XMLNode.h \
	../../common/XML/XMLParser.h \
	../../common/XML/XMLStringBuffer.h \
	../../common/weapons/Accessory.h \
	../../common/weapons/AccessoryCreateContext.h \
	../../common/weapons/AccessoryPart.h \
	../../common/weapons/AccessoryStore.h \
	../../common/weapons/AutoDefense.h \
	../../common/weapons/Battery.h \
	../../common/weapons/Economy.h \
	../../common/weapons/EconomyFreeMarket.h \
	../../common/weapons/EconomyNone.h \
	../../common/weapons/EconomyStore.h \
	../../common/weapons/Parachute.h \
	../../common/weapons/Shield.h \
	../../common/weapons/ShieldRound.h \
	../../common/weapons/ShieldRoundMag.h \
	../../common/weapons/ShieldRoundReflective.h \
	../../common/weapons/ShieldSquare.h \
	../../common/weapons/ShieldSquareReflective.h \
	../../common/weapons/Weapon.h \
	../../common/weapons/WeaponAddTarget.h \
	../../common/weapons/WeaponAimedOver.h \
	../../common/weapons/WeaponAimedUnder.h \
	../../common/weapons/WeaponAnimation.h \
	../../common/weapons/WeaponCenterPosition.h \
	../../common/weapons/WeaponDelay.h \
	../../common/weapons/WeaponExplosion.h \
	../../common/weapons/WeaponGiveAccessory.h \
	../../common/weapons/WeaponGiveLife.h \
	../../common/weapons/WeaponGiveLives.h \
	../../common/weapons/WeaponGiveMoney.h \
	../../common/weapons/WeaponGivePower.h \
	../../common/weapons/WeaponGiveScore.h \
	../../common/weapons/WeaponGiveWin.h \
	../../common/weapons/WeaponGotoLabel.h \
	../../common/weapons/WeaponGroupSelect.h \
	../../common/weapons/WeaponInvokeWeapon.h \
	../../common/weapons/WeaponLabel.h \
	../../common/weapons/WeaponLaser.h \
	../../common/weapons/WeaponLeapFrog.h \
	../../common/weapons/WeaponLightning.h \
	../../common/weapons/WeaponMessage.h \
	../../common/weapons/WeaponMirv.h \
	../../common/weapons/WeaponMoveTank.h \
	../../common/weapons/WeaponMulti.h \
	../../common/weapons/WeaponMuzzle.h \
	../../common/weapons/WeaponNapalm.h \
	../../common/weapons/WeaponNull.h \
	../../common/weapons/WeaponPosition.h \
	../../common/weapons/WeaponProjectile.h \
	../../common/weapons/WeaponRandomChoice.h \
	../../common/weapons/WeaponRedirect.h \
	../../common/weapons/WeaponReference.h \
	../../common/weapons/WeaponRepeat.h \
	../../common/weapons/WeaponRoller.h \
	../../common/weapons/WeaponScatterDirection.h \
	../../common/weapons/WeaponScatterPosition.h \
	../../common/weapons/WeaponScript.h \
	../../common/weapons/WeaponSelectPosition.h \
	../../common/weapons/WeaponSkyFlash.h \
	../../common/weapons/WeaponSound.h \
	../../common/weapons/WeaponTankPosition.h \
	../../common/weapons/WeaponTankVelocity.h \
	../../common/weapons/WeaponTeamAction.h \
	../../common/weapons/WeaponTeleport.h \
	../../common/weapons/WeaponTranslate.h \
	../../common/weapons/WeaponTypeAction.h \
	../../common/weapons/WeaponVelocity.h \
	../../common/actions/Action.h \
	../../common/actions/AddTarget.h \
	../../common/actions/CallbackWeapon.h \
	../../common/actions/CameraPositionAction.h \
	../../common/actions/Explosion.h \
	../../common/actions/ExplosionParams.h \
	../../common/actions/Laser.h \
	../../common/actions/LaserParams.h \
	../../common/actions/Lightning.h \
	../../common/actions/Napalm.h \
	../../common/actions/NapalmParams.h \
	../../common/actions/Resurrection.h \
	../../common/actions/ShieldHit.h \
	../../common/actions/ShotBounce.h \
	../../common/actions/ShotProjectile.h \
	../../common/actions/ShowScoreAction.h \
	../../common/actions/SkyFlash.h \
	../../common/actions/SoundAction.h \
	../../common/3dsparse/aseFile.tab.cpp.h \
	../../common/3dsparse/ASEModelFactory.h \
	../../common/3dsparse/Bone.h \
	../../common/3dsparse/Face.h \
	../../common/3dsparse/Mesh.h \
	../../common/3dsparse/Model.h \
	../../common/3dsparse/ModelMaths.h \
	../../common/3dsparse/ModelStore.h \
	../../common/3dsparse/MSModelFactory.h \
	../../common/3dsparse/TreeModelFactory.h \
	../../common/3dsparse/Vertex.h \
	../../common/coms/ComsAdminMessage.h \
	../../common/coms/ComsAdminResultMessage.h \
	../../common/coms/ComsBuyAccessoryMessage.h \
	../../common/coms/ComsChannelMessage.h \
	../../common/coms/ComsChannelTextMessage.h \
	../../common/coms/ComsConnectAcceptMessage.h \
	../../common/coms/ComsConnectAuthMessage.h \
	../../common/coms/ComsConnectMessage.h \
	../../common/coms/ComsConnectRejectMessage.h \
	../../common/coms/ComsDefenseMessage.h \
	../../common/coms/ComsFileAkMessage.h \
	../../common/coms/ComsFileMessage.h \
	../../common/coms/ComsGameStoppedMessage.h \
	../../common/coms/ComsGiftMoneyMessage.h \
	../../common/coms/ComsHaveModFilesMessage.h \
	../../common/coms/ComsInitializeModMessage.h \
	../../common/coms/ComsLevelLoadedMessage.h \
	../../common/coms/ComsLinesMessage.h \
	../../common/coms/ComsLoadLevelMessage.h \
	../../common/coms/ComsMessage.h \
	../../common/coms/ComsMessageHandler.h \
	../../common/coms/ComsMessageSender.h \
	../../common/coms/ComsNetStatMessage.h \
	../../common/coms/ComsOperationMessage.h \
	../../common/coms/ComsOperationResultMessage.h \
	../../common/coms/ComsPlayedMoveMessage.h \
	../../common/coms/ComsSimulateMessage.h \
	../../common/coms/ComsSimulateResultMessage.h \
	../../common/coms/ComsSyncCheckMessage.h \
	../../common/engine/ActionController.h \
	../../common/engine/EventContainer.h \
	../../common/engine/GameState.h \
	../../common/engine/GameStateI.h \
	../../common/engine/GameStateStimulusI.h \
	../../common/engine/MainLoop.h \
	../../common/engine/MainLoopI.h \
	../../common/engine/MetaClass.h \
	../../common/engine/ModDirs.h \
	../../common/engine/ModFileEntry.h \
	../../common/engine/ModFiles.h \
	../../common/engine/ModInfo.h \
	../../common/engine/PhysicsParticle.h \
	../../common/engine/PhysicsParticleObject.h \
	../../common/engine/SaveGame.h \
	../../common/engine/ScorchedCollisionIds.h \
	../../common/engine/ScorchedContext.h \
	../../common/engine/Simulator.h \
	../../common/engine/SimulatorI.h \
	../../common/engine/Wind.h \
	../../common/landscapedef/LandscapeDefinition.h \
	../../common/landscapedef/LandscapeDefinitionCache.h \
	../../common/landscapedef/LandscapeDefinitions.h \
	../../common/landscapedef/LandscapeDefinitionsBase.h \
	../../common/landscapedef/LandscapeDefinitionsItem.h \
	../../common/landscapedef/LandscapeDefn.h \
	../../common/landscapedef/LandscapeEvents.h \
	../../common/landscapedef/LandscapeInclude.h \
	../../common/landscapedef/LandscapeMovement.h \
	../../common/landscapedef/LandscapeMusic.h \
	../../common/landscapedef/LandscapeOptions.h \
	../../common/landscapedef/LandscapeSound.h \
	../../common/landscapedef/LandscapeTex.h \
	../../common/landscapedef/LandscapeTexDefn.h \
	../../common/landscapemap/DeformLandscape.h \
	../../common/landscapemap/GroundMaps.h \
	../../common/landscapemap/HeightMap.h \
	../../common/landscapemap/HeightMapLoader.h \
	../../common/landscapemap/HeightMapModifier.h \
	../../common/landscapemap/LandscapeMaps.h \
	../../common/landscapemap/MovementMap.h \
	../../common/landscapemap/NapalmMap.h \
	../../common/landscapemap/RoofMaps.h \
	../../common/lua/lapi.h \
	../../common/lua/lauxlib.h \
	../../common/lua/lcode.h \
	../../common/lua/ldebug.h \
	../../common/lua/ldo.h \
	../../common/lua/lfixed.h \
	../../common/lua/lfunc.h \
	../../common/lua/lgc.h \
	../../common/lua/llex.h \
	../../common/lua/llimits.h \
	../../common/lua/lmem.h \
	../../common/lua/lobject.h \
	../../common/lua/lopcodes.h \
	../../common/lua/lparser.h \
	../../common/lua/lstate.h \
	../../common/lua/lstring.h \
	../../common/lua/ltable.h \
	../../common/lua/ltm.h \
	../../common/lua/luaconf.h \
	../../common/lua/lualib.h \
	../../common/lua/LUAS3DLib.h \
	../../common/lua/LUAS3DWeaponLib.h \
	../../common/lua/LUAScript.h \
	../../common/lua/LUAScriptFactory.h \
	../../common/lua/LUAScriptHook.h \
	../../common/lua/LUAUtil.h \
	../../common/lua/lundump.h \
	../../common/lua/lvm.h \
	../../common/lua/lzio.h \
	../../common/movement/Boid2.h \
	../../common/movement/TargetMovement.h \
	../../common/movement/TargetMovementEntry.h \
	../../common/movement/TargetMovementEntryBoids.h \
	../../common/movement/TargetMovementEntryShips.h \
	../../common/movement/TargetMovementEntrySpline.h \
	../../common/net/NetBuffer.h \
	../../common/net/NetBufferPool.h \
	../../common/net/NetBufferUtil.h \
	../../common/net/NetInterface.h \
	../../common/net/NetInterfaceFlags.h \
	../../common/net/NetLoopBack.h \
	../../common/net/NetMessage.h \
	../../common/net/NetMessageHandler.h \
	../../common/net/NetMessagePool.h \
	../../common/net/NetServerTCP.h \
	../../common/net/NetServerTCP3.h \
	../../common/net/NetServerTCP3Coms.h \
	../../common/net/NetServerTCP3Destination.h \
	../../common/net/NetServerTCP3Recv.h \
	../../common/net/NetServerTCP3Send.h \
	../../common/net/NetServerTCPProtocol.h \
	../../common/net/NetServerTCPRead.h \
	../../common/placement/PlacementObject.h \
	../../common/placement/PlacementObjectGroup.h \
	../../common/placement/PlacementObjectHeight.h \
	../../common/placement/PlacementObjectNone.h \
	../../common/placement/PlacementObjectRandom.h \
	../../common/placement/PlacementObjectShadow.h \
	../../common/placement/PlacementObjectTarget.h \
	../../common/placement/PlacementShadowDefinition.h \
	../../common/placement/PlacementTankPosition.h \
	../../common/placement/PlacementType.h \
	../../common/placement/PlacementTypeBounds.h \
	../../common/placement/PlacementTypeCount.h \
	../../common/placement/PlacementTypeDirect.h \
	../../common/placement/PlacementTypeMask.h \
	../../common/placement/PlacementTypeTankStart.h \
	../../common/placement/PlacementTypeTree.h \
	../../common/target/Target.h \
	../../common/target/TargetContainer.h \
	../../common/target/TargetDamageCalc.h \
	../../common/target/TargetDefinition.h \
	../../common/target/TargetLife.h \
	../../common/target/TargetParachute.h \
	../../common/target/TargetRenderer.h \
	../../common/target/TargetShield.h \
	../../common/target/TargetSpace.h \
	../../common/target/TargetSpaceContainment.h \
	../../common/target/TargetState.h \
	../../common/lang/Lang.h \
	../../common/lang/LangImpl.h \
	../../common/lang/LangParam.h \
	../../common/lang/LangResource.h \
	../../common/lang/LangString.h \
	../../common/lang/ResourceBundle.h \
	../../common/lang/ResourceBundleEntry.h \
	../../common/lang/ResourceBundleEntryImpl.h \
	../../common/simactions/AdminSimAction.h \
	../../common/simactions/PlayMovesSimAction.h \
	../../common/simactions/RoundStartSimAction.h \
	../../common/simactions/RoundStopSimAction.h \
	../../common/simactions/ShowScoreSimAction.h \
	../../common/simactions/SimAction.h \
	../../common/simactions/SyncCheckSimAction.h \
	../../common/simactions/TankAccessorySimAction.h \
	../../common/simactions/TankAddSimAction.h \
	../../common/simactions/TankChangeSimAction.h \
	../../common/simactions/TankDefenseSimAction.h \
	../../common/simactions/TankGiftSimAction.h \
	../../common/simactions/TankLoadedSimAction.h \
	../../common/simactions/TankNewGameSimAction.h \
	../../common/simactions/TankNewMatchSimAction.h \
	../../common/simactions/TankRankSimAction.h \
	../../common/simactions/TankRemoveSimAction.h \
	../../common/simactions/TankStartMoveSimAction.h \
	../../common/simactions/TankStopMoveSimAction.h \
	../../common/simactions/TankTeamBallanceSimAction.h

AM_CPPFLAGS = -I../../common/porting -I../../common -I../../server -DS3D_SERVER=1 @SDL_CFLAGS@ @MYSQL_CFLAGS@
LDADD = @SDL_LIBS@ @MYSQL_LIBS@

